set(CMAKE_CXX_STANDARD 11)

set(coder_interview_chapter5_SRCS chapter5.cpp)
add_executable(coder_interview_chapter5_main ${coder_interview_chapter5_SRCS})

set(coder_interview_chapter6_SRCS chapter6.cpp)
add_executable(coder_interview_chapter6_main ${coder_interview_chapter6_SRCS})

set(coder_interview_chapter7_SRCS chapter7.cpp)
add_executable(coder_interview_chapter7_main ${coder_interview_chapter7_SRCS})

set(coder_interview_chapter9_SRCS chapter9.cpp)
add_executable(coder_interview_chapter9_main ${coder_interview_chapter9_SRCS})

set(coder_interview_chapter10_SRCS chapter10.cpp)
add_executable(coder_interview_chapter10_main ${coder_interview_chapter10_SRCS})

set(coder_interview_chapter11_SRCS chapter11.cpp)
add_executable(coder_interview_chapter11_main ${coder_interview_chapter11_SRCS})